--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,9 @@
-﻿tldrvideo.nl {
-    reverse_proxy app:8501
+﻿# Je hoofdsite (de video samenvatter)
+tldrvideo.nl {
+    reverse_proxy youtube-app:5000
+}
+
+# Je nieuwe Review Merger prototype
+merger.tldrvideo.nl {
+    reverse_proxy merger-app:5001
 }
