--- a/Dockerfile.merger
+++ b/Dockerfile.merger
@@ -1,15 +1,11 @@
-﻿ FROM python:3.9-slim
-
+﻿FROM python:3.9-slim
 WORKDIR /app
 
-# We installeren alle benodigdheden voor de Merger (Flask, RSS, Scraping)
-RUN pip install flask youtube-transcript-api requests beautifulsoup4 feedparser openai
+# Cruciaal: kopieer de lijst en installeer de tools
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Kopieer al je bestanden naar de container
+# Kopieer de rest van de code (waaronder merger_app.py)
 COPY . .
 
-# De Merger draait op poort 5001
-EXPOSE 5001
-
-# Start specifiek de nieuwe merger app
 CMD ["python", "merger_app.py"]
